Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -33,5 +33,6 @@
   "mn3:3.10": "અને એમની પાસે ભિક્ષાન્ન વધ્યુ છે જે ફેંકી દેવાનું છે.",
   "mn3:3.11": "અમે જો નહીં ખાઇએ તો ભગવંત એને વેરાન જગ્યામાં નાખી દેશે અથવા જ્યાં કોઇ પણ જીવજંતુઓ ના હોય એવા પાણીમાં ફેંકી દેશે.",
   "mn3:3.12": "પણ ભગવંતે એવું પણ કહ્યું છે:",
-  "mn3:3.13": "“ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં”."
+  "mn3:3.13": "“ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં”.",
+  "mn3:3.14": "અને ભિક્ષાન્ન એક પ્રકારની માલમિલ્કત છે."
 }
