--- a/translation/de/site/name/sutta/sn-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/sn-name_translation-de-site.json
@@ -663,6 +663,7 @@
   "sn-name:662.sn22.53": "Einbindung ",
   "sn-name:663.sn22.54": "Ein Same ",
   "sn-name:664.sn22.55": "Ein inniger Spruch ",
+  "sn-name:665.sn22.56": "Blickwinkel ",
   "sn-name:668.sn22.59": "Kennzeichen des Nicht-selbst ",
   "sn-name:671.sn22.62": "Der Geltungsbereich der Sprache ",
   "sn-name:672.sn22-arahantavagga": "Das Kapitel über die Vollendeten ",
