--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -3,5 +3,6 @@
   "sn22.56:0.2": "6. Das Kapitel über Einbindung ",
   "sn22.56:0.3": "Blickwinkel ",
   "sn22.56:1.1": "In Sāvatthī. ",
-  "sn22.56:1.2": "„Mönche und Nonnen, es gibt fünf mit Ergreifen verbundene Aggregate. "
+  "sn22.56:1.2": "„Mönche und Nonnen, es gibt fünf mit Ergreifen verbundene Aggregate. ",
+  "sn22.56:1.3": "Welche fünf? "
 }
