Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -4,5 +4,6 @@
   "sn22.56:0.3": "Blickwinkel ",
   "sn22.56:1.1": "In Sāvatthī. ",
   "sn22.56:1.2": "„Mönche und Nonnen, es gibt fünf mit Ergreifen verbundene Aggregate. ",
-  "sn22.56:1.3": "Welche fünf? "
+  "sn22.56:1.3": "Welche fünf? ",
+  "sn22.56:1.4": "Das mit Ergreifen verbundene Aggregat der Form, das des Gefühls, das der Wahrnehmung, das der Entscheidungen und das des Bewusstseins. "
 }
