Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "sn22.56:1.6": "Aber als ich diese fünf mit Ergreifen verbundenen Aggregate aus vier Blickwinkeln wahrhaftig verstanden hatte, da habe ich in dieser Welt mit ihren Göttern, Māras und Brahmās, unter dieser Bevölkerung mit ihren Asketen und Brahmanen, Göttern und Menschen mein unübertreffliches vollkommenes Erwachen erklärt. ",
   "sn22.56:2.1": "Und was sind die vier Blickwinkel? ",
   "sn22.56:2.2": "Ich erkannte Form unmittelbar, erkannte ihren Ursprung unmittelbar, erkannte ihr Aufhören unmittelbar und erkannte die Übung unmittelbar, die zu ihrem Aufhören führt. ",
-  "sn22.56:2.3": "Ich erkannte Gefühl unmittelbar … "
+  "sn22.56:2.3": "Ich erkannte Gefühl unmittelbar … ",
+  "sn22.56:2.4": "Ich erkannte Wahrnehmung unmittelbar … "
 }
