--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -11,5 +11,6 @@
   "sn22.56:2.1": "Und was sind die vier Blickwinkel? ",
   "sn22.56:2.2": "Ich erkannte Form unmittelbar, erkannte ihren Ursprung unmittelbar, erkannte ihr Aufhören unmittelbar und erkannte die Übung unmittelbar, die zu ihrem Aufhören führt. ",
   "sn22.56:2.3": "Ich erkannte Gefühl unmittelbar … ",
-  "sn22.56:2.4": "Ich erkannte Wahrnehmung unmittelbar … "
+  "sn22.56:2.4": "Ich erkannte Wahrnehmung unmittelbar … ",
+  "sn22.56:2.5": "Ich erkannte Entscheidungen unmittelbar … "
 }
