--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -34,5 +34,6 @@
   "mn3:3.11": "અમે જો નહીં ખાઇએ તો ભગવંત એને વેરાન જગ્યામાં નાખી દેશે અથવા જ્યાં કોઇ પણ જીવજંતુઓ ના હોય એવા પાણીમાં ફેંકી દેશે.",
   "mn3:3.12": "પણ ભગવંતે એવું પણ કહ્યું છે:",
   "mn3:3.13": "“ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં”.",
-  "mn3:3.14": "અને ભિક્ષાન્ન એક પ્રકારની માલમિલ્કત છે."
+  "mn3:3.14": "અને ભિક્ષાન્ન એક પ્રકારની માલમિલ્કત છે.",
+  "mn3:3.15": "કેમ હું આ ભિક્ષાન્ન ખાધા વગર ભૂખની દુર્બળતા સહન કરીને આ દિવસ અને રાત વિતાવું’."
 }
