Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "sn22.56:2.2": "Ich erkannte Form unmittelbar, erkannte ihren Ursprung unmittelbar, erkannte ihr Aufhören unmittelbar und erkannte die Übung unmittelbar, die zu ihrem Aufhören führt. ",
   "sn22.56:2.3": "Ich erkannte Gefühl unmittelbar … ",
   "sn22.56:2.4": "Ich erkannte Wahrnehmung unmittelbar … ",
-  "sn22.56:2.5": "Ich erkannte Entscheidungen unmittelbar … "
+  "sn22.56:2.5": "Ich erkannte Entscheidungen unmittelbar … ",
+  "sn22.56:2.6": "Ich erkannte Bewusstsein unmittelbar, erkannte seinen Ursprung unmittelbar, erkannte sein Aufhören unmittelbar und erkannte die Übung unmittelbar, die zu seinem Aufhören führt. "
 }
