--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "sn22.56:2.3": "Ich erkannte Gefühl unmittelbar … ",
   "sn22.56:2.4": "Ich erkannte Wahrnehmung unmittelbar … ",
   "sn22.56:2.5": "Ich erkannte Entscheidungen unmittelbar … ",
-  "sn22.56:2.6": "Ich erkannte Bewusstsein unmittelbar, erkannte seinen Ursprung unmittelbar, erkannte sein Aufhören unmittelbar und erkannte die Übung unmittelbar, die zu seinem Aufhören führt. "
+  "sn22.56:2.6": "Ich erkannte Bewusstsein unmittelbar, erkannte seinen Ursprung unmittelbar, erkannte sein Aufhören unmittelbar und erkannte die Übung unmittelbar, die zu seinem Aufhören führt. ",
+  "sn22.56:3.1": "Und was ist Form? "
 }
