Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -35,5 +35,5 @@
   "mn3:3.12": "પણ ભગવંતે એવું પણ કહ્યું છે:",
   "mn3:3.13": "“ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં”.",
   "mn3:3.14": "અને ભિક્ષાન્ન એક પ્રકારની માલમિલ્કત છે.",
-  "mn3:3.15": "કેમ હું આ ભિક્ષાન્ન ખાધા વગર ભૂખની દુર્બળતા સહન કરીને આ દિવસ અને રાત વિતાવું’."
+  "mn3:3.15": "કેમ હું આ ભિક્ષાન્ન ખાધા વગર ભૂખની દુર્બળતા સાથે આ દિવસ અને રાત વિતાવું’."
 }
