--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -37,5 +37,6 @@
   "mn3:3.14": "અને ભિક્ષાન્ન એક પ્રકારની માલમિલ્કત છે.",
   "mn3:3.15": "કેમ હું આ ભિક્ષાન્ન ખાધા વગર ભૂખની દુર્બળતા સાથે આ દિવસ અને રાત વિતાવું’.",
   "mn3:3.16": "તો પછી એણે ભિક્ષાન્ન ખાધા વગર ભૂખની દુર્બળતા સાથે આ દિવસ અને રાત વિતાવી.",
-  "mn3:3.17": "બીજા ભિક્ષુના મનમાં એવો વિચાર આવ્યો:"
+  "mn3:3.17": "બીજા ભિક્ષુના મનમાં એવો વિચાર આવ્યો:",
+  "mn3:3.18": "‘ભગવંતે ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;"
 }
