Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -38,5 +38,6 @@
   "mn3:3.15": "કેમ હું આ ભિક્ષાન્ન ખાધા વગર ભૂખની દુર્બળતા સાથે આ દિવસ અને રાત વિતાવું’.",
   "mn3:3.16": "તો પછી એણે ભિક્ષાન્ન ખાધા વગર ભૂખની દુર્બળતા સાથે આ દિવસ અને રાત વિતાવી.",
   "mn3:3.17": "બીજા ભિક્ષુના મનમાં એવો વિચાર આવ્યો:",
-  "mn3:3.18": "‘ભગવંતે ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;"
+  "mn3:3.18": "‘ભગવંતે ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;",
+  "mn3:3.19": "અને એમની પાસે ભિક્ષાન્ન વધ્યું છે જે ફેંકી દેવાનું છે."
 }
