--- a/translation/de/sabbamitta/sutta/sn/sn47/sn47.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn47/sn47.42_translation-de-sabbamitta.json
@@ -5,7 +5,7 @@
   "sn47.42:1.1": "„Mönche und Nonnen, ich werde euch den Ursprung und das Enden der vier Arten der Achtsamkeitsmeditation lehren. ",
   "sn47.42:1.2": "Hört zu … ",
   "sn47.42:1.3": "Und was ist der Ursprung des Körpers? ",
-  "sn47.42:1.4": "Der Körper wird von Nahrung erzeugt. ",
+  "sn47.42:1.4": "Der Körper entsteht aus Nahrung. ",
   "sn47.42:1.5": "Wenn die Nahrung aufhört, endet der Körper. ",
   "sn47.42:1.6": "Gefühl wird von Berührung erzeugt. ",
   "sn47.42:1.7": "Wenn Berührung aufhört, endet Gefühl. ",
