Translations by trush23 to translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json

--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -30,7 +30,7 @@
   "mn3:3.7": "જો ઇચ્છા હોય તો ખાઓ. જો તમે નહી ખાઓ તો હું એને વેરાન જગ્યામાં નાખી દઇશ અથવા જ્યાં કોઇ પણ જીવજંતુઓ ના હોય એવા પાણીમાં ફેંકી દઇશ’.",
   "mn3:3.8": "તો એક ભિક્ષુના મનમાં એવો વિચાર આવ્યો:",
   "mn3:3.9": "‘ભગવંતે ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;",
-  "mn3:3.10": "અને એમની પાસે ભિક્ષાન્ન વધ્યુ છે જે ફેંકી દેવાનું છે.",
+  "mn3:3.10": "અને એમની પાસે ભિક્ષાન્ન વધ્યું છે જે ફેંકી દેવાનું છે.",
   "mn3:3.11": "અમે જો નહીં ખાઇએ તો ભગવંત એને વેરાન જગ્યામાં નાખી દેશે અથવા જ્યાં કોઇ પણ જીવજંતુઓ ના હોય એવા પાણીમાં ફેંકી દેશે.",
   "mn3:3.12": "પણ ભગવંતે એવું પણ કહ્યું છે:",
   "mn3:3.13": "“ભિક્ષુઓ, ધર્મમાં મારા વારસહાર બનો, માલમિલ્કતમાં નહીં”.",
