--- a/translation/de/sabbamitta/sutta/sn/sn47/sn47.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn47/sn47.42_translation-de-sabbamitta.json
@@ -7,7 +7,7 @@
   "sn47.42:1.3": "Und was ist der Ursprung des Körpers? ",
   "sn47.42:1.4": "Der Körper entsteht aus Nahrung. ",
   "sn47.42:1.5": "Wenn die Nahrung aufhört, endet der Körper. ",
-  "sn47.42:1.6": "Gefühl wird von Berührung erzeugt. ",
+  "sn47.42:1.6": "Gefühl entsteht aus Berührung. ",
   "sn47.42:1.7": "Wenn Berührung aufhört, endet Gefühl. ",
   "sn47.42:1.8": "Der Geist wird von Name und Form erzeugt. ",
   "sn47.42:1.9": "Wenn Name und Form aufhören, endet der Geist. ",
