Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn47/sn47.42_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn47/sn47.42_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn47/sn47.42_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "sn47.42:1.5": "Wenn die Nahrung aufhört, endet der Körper. ",
   "sn47.42:1.6": "Gefühl entsteht aus Berührung. ",
   "sn47.42:1.7": "Wenn Berührung aufhört, endet Gefühl. ",
-  "sn47.42:1.8": "Der Geist wird von Name und Form erzeugt. ",
+  "sn47.42:1.8": "Der Geist entsteht aus Name und Form. ",
   "sn47.42:1.9": "Wenn Name und Form aufhören, endet der Geist. ",
   "sn47.42:1.10": "Natürliche Gesetzmäßigkeiten werden von Aufmerksamkeit erzeugt. ",
   "sn47.42:1.11": "Wenn die Aufmerksamkeit aufhört, enden die natürlichen Gesetzmäßigkeiten.“ "
