--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -41,5 +41,5 @@
   "mn3:3.18": "‘ભગવંતે ખાધું છે અને પેટ ભરાઇ જવાથી સંતુષ્ટ થઇને ભોજન પતાવ્યું છે;",
   "mn3:3.19": "અને એમની પાસે ભિક્ષાન્ન વધ્યું છે જે ફેંકી દેવાનું છે.",
   "mn3:3.20": "અમે જો નહીં ખાઇએ તો ભગવંત એને વેરાન જગ્યામાં નાખી દેશે અથવા જ્યાં કોઇ પણ જીવજંતુઓ ના હોય એવા પાણીમાં ફેંકી દેશે.",
-  "mn3:3.21": "કેમ હું આ ભિક્ષાન્ન ખાઇને ભૂખની દુર્બળતા વગર આ દિવસ અને રાત વિતાવું’."
+  "mn3:3.21": "કેમ હું આ ભિક્ષાન્ન ખાઇને ભૂખની દુર્બળતા દૂર કરીને આ દિવસ અને રાત વિતાવું’."
 }
