Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -17,5 +17,5 @@
   "sn22.56:3.1": "Und was ist Form? ",
   "sn22.56:3.2": "Die vier Grundelemente und die Form, die von den vier Grundelementen abgeleitet ist,  ",
   "sn22.56:3.3": "das nennt man Form. ",
-  "sn22.56:3.4": "Form wird von Nahrung erzeugt. "
+  "sn22.56:3.4": "Form entsteht aus Nahrung. "
 }
