--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn22.56:3.2": "Die vier Grundelemente und die Form, die von den vier Grundelementen abgeleitet ist,  ",
   "sn22.56:3.3": "das nennt man Form. ",
   "sn22.56:3.4": "Form entsteht aus Nahrung. ",
-  "sn22.56:3.5": "Wenn die Nahrung aufhört, hört Form auf. "
+  "sn22.56:3.5": "Wenn die Nahrung aufhört, hört Form auf. ",
+  "sn22.56:3.6": "Die Übung, die zum Aufhören der Form führt, ist einfach dieser edle achtfache Pfad: nämlich "
 }
