Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -21,5 +21,6 @@
   "sn22.56:3.5": "Wenn die Nahrung aufhört, hört Form auf. ",
   "sn22.56:3.6": "Die Übung, die zum Aufhören der Form führt, ist einfach dieser edle achtfache Pfad: nämlich ",
   "sn22.56:3.7": "rechte Ansicht, rechtes Denken, rechte Rede, rechtes Verhalten, rechter Lebenserwerb, rechter Einsatz, rechte Achtsamkeit und rechte Versenkung. ",
-  "sn22.56:4.1": "Alle Asketen und Brahmanen, die Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, auf diese Art unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Form üben: Sie üben gut. "
+  "sn22.56:4.1": "Alle Asketen und Brahmanen, die Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, auf diese Art unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Form üben: Sie üben gut. ",
+  "sn22.56:4.2": "Die, die gut üben, haben einen festen Halt in dieser Lehre und Schulung. "
 }
