--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.31_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.31_translation-de-sabbamitta.json
@@ -35,7 +35,7 @@
   "sn12.31:8.4": "Man sieht wahrhaftig mit rechter Weisheit, dass es mit jenem als Nahrung entstanden ist. ",
   "sn12.31:8.5": "Wenn man das sieht, ist man aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf die Nahrung für sein Entstehen durch Nicht-Ergreifen befreit. ",
   "sn12.31:8.6": "Man sieht wahrhaftig mit rechter Weisheit, dass, wenn jene Nahrung aufhört, das Entstandene aufhören muss. ",
-  "sn12.31:8.7": "Wenn man das sieht, ergreift man es nicht und ist durch Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf das, was aufhören muss, befreit. ",
+  "sn12.31:8.7": "Wenn man das sieht, ist man aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf das, was aufhören muss, durch Nicht-Ergreifen befreit. ",
   "sn12.31:8.8": "So hat man die Lehre eingeschätzt. ",
   "sn12.31:8.9": "Herr, hinsichtlich des Spruchs im ‚Weg zum Jenseits‘, in ‚Ajitas Fragen‘: ",
   "sn12.31:9.1": "‚Die die Lehre eingeschätzt haben, ",
