--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.67_translation-de-sabbamitta.json
@@ -50,7 +50,7 @@
   "sn12.67:8.4": "Und wir können der Aussage des Ehrwürdigen Sāriputta aus diesen sechsunddreißig Gründen zustimmen: ",
   "sn12.67:9.1": "Wenn ein Mönch den Dhamma für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Alter und Tod lehrt, darf er ein Mönch genannt werden, der den Dhamma lehrt. ",
   "sn12.67:9.2": "Wenn er für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Alter und Tod übt, darf er ein Mönch genannt werden, der im Einklang mit der Lehre übt. ",
-  "sn12.67:9.3": "Wenn er nicht ergreift und dadurch befreit ist, durch Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Alter und Tod befreit ist, darf er ein Mönch genannt werden, der das Erlöschen in diesem Leben erreicht hat. ",
+  "sn12.67:9.3": "Wenn er aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Alter und Tod durch Nicht-Ergreifen befreit ist, darf er ein Mönch genannt werden, der das Erlöschen in diesem Leben erreicht hat. ",
   "sn12.67:9.4": "Wenn ein Mönch den Dhamma für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Wiedergeburt lehrt … ",
   "sn12.67:9.5": "in Bezug auf fortgesetztes Dasein … ",
   "sn12.67:9.6": "in Bezug auf Ergreifen … ",
