Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.67_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.67_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.67_translation-de-sabbamitta.json
@@ -63,5 +63,5 @@
   "sn12.67:9.13": "in Bezug auf Entscheidungen … ",
   "sn12.67:9.14": "Wenn ein Mönch den Dhamma für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Unwissenheit lehrt, darf er ein Mönch genannt werden, der den Dhamma lehrt. ",
   "sn12.67:9.15": "Wenn er für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Unwissenheit übt, darf er ein Mönch genannt werden, der im Einklang mit der Lehre übt. ",
-  "sn12.67:9.16": "Wenn er nicht ergreift und dadurch befreit ist, durch Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Unwissenheit befreit ist, darf er ein Mönch genannt werden, der das Erlöschen in diesem Leben erreicht hat.“ "
+  "sn12.67:9.16": "Wenn er aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Unwissenheit durch Nicht-Ergreifen befreit ist, darf er ein Mönch genannt werden, der das Erlöschen in diesem Leben erreicht hat.“ "
 }
