Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json
@@ -43,7 +43,7 @@
   "sn12.2:7.3": "Verlangen nach Bildern, Tönen, Düften, Geschmäcken, Berührungen und Gedanken; ",
   "sn12.2:7.4": "das nennt man Verlangen. ",
   "sn12.2:8.1": "Und was ist Gefühl? ",
-  "sn12.2:8.2": "Es gibt diese sechs Klassen des Gefühls: ",
+  "sn12.2:8.2": "Es gibt sechs Klassen des Gefühls: ",
   "sn12.2:8.3": "Gefühl entsprungen aus Berührung mit dem Auge, dem Ohr, der Nase, der Zunge, dem Körper und dem Geist; ",
   "sn12.2:8.4": "das nennt man Gefühl. ",
   "sn12.2:9.1": "Und was ist Berührung? ",
