--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn22.56:5.1": "Diese Asketen und Brahmanen, die Form, ihren Ursprung, ihr Aufhören und die Übung, die zu ihrem Aufhören führt, auf diese Art unmittelbar erkannt haben und aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Form durch Nicht-Ergreifen befreit sind: Sie sind gut befreit. ",
   "sn22.56:5.2": "Die, die gut befreit sind, sind Vollkommene. ",
   "sn22.56:5.3": "Für Vollkommene ist kein Kreislauf der Wiedergeburten zu finden. ",
-  "sn22.56:6.1": "Und was ist Gefühl? "
+  "sn22.56:6.1": "Und was ist Gefühl? ",
+  "sn22.56:6.2": "Es gibt sechs Klassen des Gefühls: "
 }
