--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -29,5 +29,6 @@
   "sn22.56:6.1": "Und was ist Gefühl? ",
   "sn22.56:6.2": "Es gibt sechs Klassen des Gefühls: ",
   "sn22.56:6.3": "Gefühl entsprungen aus Berührung mit dem Auge, dem Ohr, der Nase, der Zunge, dem Körper und dem Geist, ",
-  "sn22.56:6.4": "das nennt man Gefühl. "
+  "sn22.56:6.4": "das nennt man Gefühl. ",
+  "sn22.56:6.5": "Gefühl entsteht aus Berührung. "
 }
