--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -32,5 +32,6 @@
   "sn22.56:6.4": "das nennt man Gefühl. ",
   "sn22.56:6.5": "Gefühl entsteht aus Berührung. ",
   "sn22.56:6.6": "Wenn Berührung aufhört, hört Gefühl auf. ",
-  "sn22.56:6.7": "Die Übung, die zum Aufhören der Gefühle führt, ist einfach dieser edle achtfache Pfad … "
+  "sn22.56:6.7": "Die Übung, die zum Aufhören der Gefühle führt, ist einfach dieser edle achtfache Pfad … ",
+  "sn22.56:9.1": "Und was ist Wahrnehmung? "
 }
