--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -34,5 +34,6 @@
   "sn22.56:6.6": "Wenn Berührung aufhört, hört Gefühl auf. ",
   "sn22.56:6.7": "Die Übung, die zum Aufhören der Gefühle führt, ist einfach dieser edle achtfache Pfad … ",
   "sn22.56:9.1": "Und was ist Wahrnehmung? ",
-  "sn22.56:9.2": "Es gibt sechs Klassen von Wahrnehmung: "
+  "sn22.56:9.2": "Es gibt sechs Klassen von Wahrnehmung: ",
+  "sn22.56:9.3": "Wahrnehmung von Bildern, Tönen, Düften, Geschmäcken, Berührungen und Gedanken, "
 }
