--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -39,5 +39,6 @@
   "sn22.56:9.4": "das nennt man Wahrnehmung. ",
   "sn22.56:9.5": "Wahrnehmung entsteht aus Berührung. ",
   "sn22.56:9.6": "Wenn Berührung aufhört, hört Wahrnehmung auf. ",
-  "sn22.56:9.7": "Die Übung, die zum Aufhören der Wahrnehmung führt, ist einfach dieser edle achtfache Pfad … "
+  "sn22.56:9.7": "Die Übung, die zum Aufhören der Wahrnehmung führt, ist einfach dieser edle achtfache Pfad … ",
+  "sn22.56:10.1": "Und was sind Entscheidungen? "
 }
