--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -42,5 +42,6 @@
   "sn22.56:9.7": "Die Übung, die zum Aufhören der Wahrnehmung führt, ist einfach dieser edle achtfache Pfad … ",
   "sn22.56:10.1": "Und was sind Entscheidungen? ",
   "sn22.56:10.2": "Es gibt sechs Klassen von Entscheidungen: ",
-  "sn22.56:10.3": "Absicht in Bezug auf Bilder, Töne, Düfte, Geschmäcke, Berührungen und Gedanken, "
+  "sn22.56:10.3": "Absicht in Bezug auf Bilder, Töne, Düfte, Geschmäcke, Berührungen und Gedanken, ",
+  "sn22.56:10.4": "das nennt man Entscheidungen. "
 }
