Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -44,5 +44,6 @@
   "sn22.56:10.2": "Es gibt sechs Klassen von Entscheidungen: ",
   "sn22.56:10.3": "Absicht in Bezug auf Bilder, Töne, Düfte, Geschmäcke, Berührungen und Gedanken, ",
   "sn22.56:10.4": "das nennt man Entscheidungen. ",
-  "sn22.56:10.5": "Entscheidungen entstehen aus Berührung. "
+  "sn22.56:10.5": "Entscheidungen entstehen aus Berührung. ",
+  "sn22.56:10.6": "Wenn Berührung aufhört, hören Entscheidungen auf. "
 }
