--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -45,5 +45,6 @@
   "sn22.56:10.3": "Absicht in Bezug auf Bilder, Töne, Düfte, Geschmäcke, Berührungen und Gedanken, ",
   "sn22.56:10.4": "das nennt man Entscheidungen. ",
   "sn22.56:10.5": "Entscheidungen entstehen aus Berührung. ",
-  "sn22.56:10.6": "Wenn Berührung aufhört, hören Entscheidungen auf. "
+  "sn22.56:10.6": "Wenn Berührung aufhört, hören Entscheidungen auf. ",
+  "sn22.56:10.7": "Die Übung, die zum Aufhören von Entscheidungen führt, ist einfach dieser edle achtfache Pfad … "
 }
