--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json
@@ -61,7 +61,7 @@
   "sn12.2:11.6": "So ist Name, und so ist Form; ",
   "sn12.2:11.7": "das nennt man Name und Form. ",
   "sn12.2:12.1": "Und was ist Bewusstsein? ",
-  "sn12.2:12.2": "Es gibt diese sechs Klassen von Bewusstsein: ",
+  "sn12.2:12.2": "Es gibt sechs Klassen von Bewusstsein: ",
   "sn12.2:12.3": "Sehbewusstsein, Hörbewusstsein, Riechbewusstsein, Schmeckbewusstsein, Körperbewusstsein und Geistbewusstsein; ",
   "sn12.2:12.4": "das nennt man Bewusstsein. ",
   "sn12.2:13.1": "Und was sind Entscheidungen? ",
