Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn12/sn12.2_translation-de-sabbamitta.json
@@ -39,7 +39,7 @@
   "sn12.2:6.3": "Das Ergreifen von Sinnenfreuden, von Ansichten, von Regeln und Gelübden und von Theorien über ein Selbst; ",
   "sn12.2:6.4": "das nennt man Ergreifen. ",
   "sn12.2:7.1": "Und was ist Verlangen? ",
-  "sn12.2:7.2": "Es gibt diese sechs Klassen des Verlangens: ",
+  "sn12.2:7.2": "Es gibt sechs Klassen des Verlangens: ",
   "sn12.2:7.3": "Verlangen nach Bildern, Tönen, Düften, Geschmäcken, Berührungen und Gedanken; ",
   "sn12.2:7.4": "das nennt man Verlangen. ",
   "sn12.2:8.1": "Und was ist Gefühl? ",
