Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -47,5 +47,6 @@
   "sn22.56:10.5": "Entscheidungen entstehen aus Berührung. ",
   "sn22.56:10.6": "Wenn Berührung aufhört, hören Entscheidungen auf. ",
   "sn22.56:10.7": "Die Übung, die zum Aufhören von Entscheidungen führt, ist einfach dieser edle achtfache Pfad … ",
-  "sn22.56:13.1": "Und was ist Bewusstsein? "
+  "sn22.56:13.1": "Und was ist Bewusstsein? ",
+  "sn22.56:13.2": "Es gibt sechs Klassen von Bewusstsein: "
 }
