--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -51,5 +51,6 @@
   "sn22.56:13.2": "Es gibt sechs Klassen von Bewusstsein: ",
   "sn22.56:13.3": "Sehbewusstsein, Hörbewusstsein, Riechbewusstsein, Schmeckbewusstsein, Körperbewusstsein und Geistbewusstsein, ",
   "sn22.56:13.4": "das nennt man Bewusstsein. ",
-  "sn22.56:13.5": "Bewusstsein entsteht aus Namen und Form. "
+  "sn22.56:13.5": "Bewusstsein entsteht aus Namen und Form. ",
+  "sn22.56:13.6": "Wenn Name und Form aufhören, hört Bewusstsein auf. "
 }
