Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -55,5 +55,6 @@
   "sn22.56:13.6": "Wenn Name und Form aufhören, hört Bewusstsein auf. ",
   "sn22.56:13.7": "Die Übung, die zum Aufhören des Bewusstseins führt, ist einfach dieser edle achtfache Pfad: nämlich ",
   "sn22.56:13.8": "rechte Ansicht, rechtes Denken, rechte Rede, rechtes Verhalten, rechter Lebenserwerb, rechter Einsatz, rechte Achtsamkeit und rechte Versenkung. ",
-  "sn22.56:14.1": "Alle Asketen und Brahmanen, die Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt, auf diese Art unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Bewusstsein üben: Sie üben gut. "
+  "sn22.56:14.1": "Alle Asketen und Brahmanen, die Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt, auf diese Art unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Bewusstsein üben: Sie üben gut. ",
+  "sn22.56:14.2": "Die, die gut üben, haben einen festen Halt in dieser Lehre und Schulung. "
 }
