Translations by sabbamitta to translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -57,5 +57,6 @@
   "sn22.56:13.8": "rechte Ansicht, rechtes Denken, rechte Rede, rechtes Verhalten, rechter Lebenserwerb, rechter Einsatz, rechte Achtsamkeit und rechte Versenkung. ",
   "sn22.56:14.1": "Alle Asketen und Brahmanen, die Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt, auf diese Art unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Bewusstsein üben: Sie üben gut. ",
   "sn22.56:14.2": "Die, die gut üben, haben einen festen Halt in dieser Lehre und Schulung. ",
-  "sn22.56:15.1": "Diese Asketen und Brahmanen, die Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt, auf diese Art unmittelbar erkannt haben und aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit sind: Sie sind gut befreit. "
+  "sn22.56:15.1": "Diese Asketen und Brahmanen, die Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt, auf diese Art unmittelbar erkannt haben und aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit sind: Sie sind gut befreit. ",
+  "sn22.56:15.2": "Die, die gut befreit sind, sind Vollkommene. "
 }
