--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -58,5 +58,6 @@
   "sn22.56:14.1": "Alle Asketen und Brahmanen, die Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt, auf diese Art unmittelbar erkannt haben und die für das Ziel der Ernüchterung, des Schwindens der Leidenschaft und des Aufhörens in Bezug auf Bewusstsein üben: Sie üben gut. ",
   "sn22.56:14.2": "Die, die gut üben, haben einen festen Halt in dieser Lehre und Schulung. ",
   "sn22.56:15.1": "Diese Asketen und Brahmanen, die Bewusstsein, seinen Ursprung, sein Aufhören und die Übung, die zu seinem Aufhören führt, auf diese Art unmittelbar erkannt haben und aufgrund von Ernüchterung, Schwinden der Leidenschaft und Aufhören in Bezug auf Bewusstsein durch Nicht-Ergreifen befreit sind: Sie sind gut befreit. ",
-  "sn22.56:15.2": "Die, die gut befreit sind, sind Vollkommene. "
+  "sn22.56:15.2": "Die, die gut befreit sind, sind Vollkommene. ",
+  "sn22.56:15.3": "Für Vollkommene ist kein Kreislauf der Wiedergeburten zu finden.“ "
 }
