--- a/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn33_translation-de-sabbamitta.json
@@ -622,7 +622,7 @@
   "dn33:2.2.15": "Wahrnehmung von Bildern, Tönen, Düften, Geschmäcken, Berührungen und Gedanken. ",
   "dn33:2.2.16": "Sechs Klassen von Absicht: ",
   "dn33:2.2.17": "Absicht in Bezug auf Bilder, Töne, Düfte, Geschmäcke, Berührungen und Gedanken. ",
-  "dn33:2.2.18": "Sechs Klassen des Verlangens: ",
+  "dn33:2.2.18": "Sechs Klassen von Verlangen: ",
   "dn33:2.2.19": "Verlangen nach Bildern, Tönen, Düften, Geschmäcken, Berührungen und Gedanken. ",
   "dn33:2.2.20": "Sechs Arten von fehlender Achtung: ",
   "dn33:2.2.21": "Ein Mönch oder eine Nonne hat keine Achtung und keine Ehrfurcht vor dem Lehrer, vor der Lehre und vor dem Saṅgha, vor der Schulung, vor Beflissenheit und vor Gastfreundschaft. ",
