--- a/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
+++ b/translation/gu/trush/sutta/mn/mn3_translation-gu-trush.json
@@ -42,5 +42,6 @@
   "mn3:3.19": "અને એમની પાસે ભિક્ષાન્ન વધ્યું છે જે ફેંકી દેવાનું છે.",
   "mn3:3.20": "અમે જો નહીં ખાઇએ તો ભગવંત એને વેરાન જગ્યામાં નાખી દેશે અથવા જ્યાં કોઇ પણ જીવજંતુઓ ના હોય એવા પાણીમાં ફેંકી દેશે.",
   "mn3:3.21": "કેમ હું આ ભિક્ષાન્ન ખાઇને ભૂખની દુર્બળતા દૂર કરીને આ દિવસ અને રાત વિતાવું’.",
-  "mn3:3.22": "તો પછી એણે ભિક્ષાન્ન ખાઇને ભૂખની દુર્બળતા દૂર કરીને આ દિવસ અને રાત વિતાવી."
+  "mn3:3.22": "તો પછી એણે ભિક્ષાન્ન ખાઇને ભૂખની દુર્બળતા દૂર કરીને આ દિવસ અને રાત વિતાવી.",
+  "mn3:3.23": "ભિક્ષુઓ, જોકે એ ભિક્ષુ ભિક્ષાન્ન ખાઇને ભૂખની દુર્બળતા દૂર કરીને આ દિવસ અને રાત વિતાવે, તો પણ મારા હિસાબે પહેલો ભિક્ષુ વધારે માનનીય અને પ્રસંશા યોગ્ય છે."
 }
