--- a/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn22/sn22.56_translation-de-sabbamitta.json
@@ -50,7 +50,7 @@
   "sn22.56:13.1": "Und was ist Bewusstsein? ",
   "sn22.56:13.2": "Es gibt sechs Klassen von Bewusstsein: ",
   "sn22.56:13.3": "Sehbewusstsein, Hörbewusstsein, Riechbewusstsein, Schmeckbewusstsein, Körperbewusstsein und Geistbewusstsein. ",
-  "sn22.56:13.4": "das nennt man Bewusstsein. ",
+  "sn22.56:13.4": "Das nennt man Bewusstsein. ",
   "sn22.56:13.5": "Bewusstsein entsteht aus Namen und Form. ",
   "sn22.56:13.6": "Wenn Name und Form aufhören, hört Bewusstsein auf. ",
   "sn22.56:13.7": "Die Übung, die zum Aufhören des Bewusstseins führt, ist einfach dieser edle achtfache Pfad: nämlich ",
