--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -1,6 +1,8 @@
 {
   "sn54.13:0.1": "Les Discours Regroupés par Thèmes 54.13",
+  "sn54.13:0.2": "2. Deuxième chapitre",
   "sn54.13:0.3": "Avec Ananda",
   "sn54.13:1.1": "À Savatthi.",
+  "sn54.13:1.2": "Ce jour-là, le vénérable Ananda alla voir le Fortuné, lui rendit hommage, s’assit d’un côté et lui dit :",
   "sn54.13:1.3": "«Y a-t-il, Bhanté un état qui, lorsqu’il est développé et cultivé abondamment, porte quatre états à leur complétude ? Y a-t-il quatre états qui, lorsqu’ils sont développés et cultivés abondamment, portent sept états à leur complétude ? Et y a-t-il sept états qui, lorsqu’ils sont développés et cultivés abondamment, portent deux états à leur complétude ?"
 }
