--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -18,5 +18,6 @@
   "sn54.13:5.3": "où il s’entraîne : «je vais inspirer en calmant les constructions corporelles’ ; où il s’entraîne : «je vais expirer en calmant les constructions corporelles’,",
   "sn54.13:5.4": "à ce moment-là le mendiant reste à observer le corps dans le corps, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
   "sn54.13:5.5": "Et quelle en est la raison ?",
-  "sn54.13:5.6": "Je parle, Ananda, de l’inspiration-et-expiration comme d’un certain corps."
+  "sn54.13:5.6": "Je parle, Ananda, de l’inspiration-et-expiration comme d’un certain corps.",
+  "sn54.13:5.7": "C’est pourquoi, Ananda, à ce moment-là, un mendiant reste à observer le corps dans le corps, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde."
 }
