--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -20,5 +20,6 @@
   "sn54.13:5.5": "Et quelle en est la raison ?",
   "sn54.13:5.6": "Je parle, Ananda, de l’inspiration-et-expiration comme d’un certain corps.",
   "sn54.13:5.7": "C’est pourquoi, Ananda, à ce moment-là, un mendiant reste à observer le corps dans le corps, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
-  "sn54.13:6.1": "Au moment, Ananda, où un mendiant s’entraîne : ’je vais inspirer en ressentant l’exaltation’ ; où il s’entraîne : «je vais expirer en ressentant l’exaltation’ ;"
+  "sn54.13:6.1": "Au moment, Ananda, où un mendiant s’entraîne : ’je vais inspirer en ressentant l’exaltation’ ; où il s’entraîne : «je vais expirer en ressentant l’exaltation’ ;",
+  "sn54.13:6.2": "où il s’entraîne : «je vais inspirer en ressentant le bien-être’ ; où il s’entraîne : «je vais expirer en ressentant le bien-être’ ;"
 }
