--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -27,5 +27,6 @@
   "sn54.13:6.5": "à ce moment-là le mendiant reste à observer les ressentis dans les ressentis, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
   "sn54.13:6.6": "Et quelle en est la raison ?",
   "sn54.13:6.7": "Je parle, Ananda, de l’attention minutieuse portée à l’inspiration-et-expiration comme d’un certain ressenti.",
-  "sn54.13:6.8": "C’est pourquoi, Ananda, à ce moment-là, un mendiant reste à observer les ressentis dans les ressentis, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde."
+  "sn54.13:6.8": "C’est pourquoi, Ananda, à ce moment-là, un mendiant reste à observer les ressentis dans les ressentis, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
+  "sn54.13:7.1": "Au moment, Ananda, où un mendiant s’entraîne : ’je vais inspirer en ressentant l’esprit’ ; où il s’entraîne : «je vais expirer en ressentant l’esprit’ ;"
 }
