--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -31,5 +31,6 @@
   "sn54.13:7.1": "Au moment, Ananda, où un mendiant s’entraîne : ’je vais inspirer en ressentant l’esprit’ ; où il s’entraîne : «je vais expirer en ressentant l’esprit’ ;",
   "sn54.13:7.2": "où il s’entraîne : «je vais inspirer en réjouissant l’esprit’ ; où il s’entraîne : «je vais expirer en réjouissant l’esprit’ ;",
   "sn54.13:7.3": "où il s’entraîne : «je vais inspirer en concentrant l’esprit’ ; où il s’entraîne : «je vais expirer en concentrant l’esprit’ ;",
-  "sn54.13:7.4": "où il s’entraîne : «je vais inspirer en délivrant l’esprit’ ; où il s’entraîne : «je vais expirer en délivrant l’esprit’,"
+  "sn54.13:7.4": "où il s’entraîne : «je vais inspirer en délivrant l’esprit’ ; où il s’entraîne : «je vais expirer en délivrant l’esprit’,",
+  "sn54.13:7.5": "à ce moment-là le mendiant reste à observer l’esprit dans l’esprit, en étant ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde."
 }
