Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -44,5 +44,6 @@
   "sn54.13:8.6": "Ayant vu avec discernement ce qu’est l’abandon de la convoitise et de l’affliction mentale, il observe minutieusement avec équanimité.",
   "sn54.13:8.7": "C’est pourquoi, Ananda, à ce moment-là, un mendiant reste à observer le Dhamma dans les phénomènes, ardent, doué d’un discernement attentif, présent d’esprit, ayant abandonné convoitise et affliction mentale vis-à-vis du monde.",
   "sn54.13:9.1": "Voici, Ananda, comment la concentration au moyen de la présence de l’esprit sur la respiration est développée et cultivée, de manière à porter les quatre mises en place de la présence d’esprit à leur complétude.",
-  "sn54.13:10.1": "Et comment, Ananda, les quatre mises en place de la présence d’esprit sont-elles développées et cultivées abondamment de manière à porter les sept facteurs d’éveil à leur complétude ?"
+  "sn54.13:10.1": "Et comment, Ananda, les quatre mises en place de la présence d’esprit sont-elles développées et cultivées abondamment de manière à porter les sept facteurs d’éveil à leur complétude ?",
+  "sn54.13:10.2": "Au moment, Ananda, où un mendiant reste à observer le corps dans le corps,"
 }
