--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -47,5 +47,6 @@
   "sn54.13:10.1": "Et comment, Ananda, les quatre mises en place de la présence d’esprit sont-elles développées et cultivées abondamment de manière à porter les sept facteurs d’éveil à leur complétude ?",
   "sn54.13:10.2": "Au moment, Ananda, où un mendiant reste à observer le corps dans le corps,",
   "sn54.13:10.3": "à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction.",
-  "sn54.13:10.4": "Au moment, Ananda, où la présence d’esprit d’un mendiant est mise en place, sans distraction, à ce moment-là le facteur d’éveil de présence d’esprit est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de présence d’esprit, à ce moment-là le facteur d’éveil de présence d’esprit va à la complétude de son développement chez ce mendiant."
+  "sn54.13:10.4": "Au moment, Ananda, où la présence d’esprit d’un mendiant est mise en place, sans distraction, à ce moment-là le facteur d’éveil de présence d’esprit est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de présence d’esprit, à ce moment-là le facteur d’éveil de présence d’esprit va à la complétude de son développement chez ce mendiant.",
+  "sn54.13:11.1": "En demeurant ainsi présent d’esprit, il examine, analyse et investigue minutieusement cet état avec discernement."
 }
