Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -49,5 +49,6 @@
   "sn54.13:10.3": "à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction.",
   "sn54.13:10.4": "Au moment, Ananda, où la présence d’esprit d’un mendiant est mise en place, sans distraction, à ce moment-là le facteur d’éveil de présence d’esprit est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de présence d’esprit, à ce moment-là le facteur d’éveil de présence d’esprit va à la complétude de son développement chez ce mendiant.",
   "sn54.13:11.1": "En demeurant ainsi présent d’esprit, il examine, analyse et investigue minutieusement cet état avec discernement.",
-  "sn54.13:11.2": "Au moment, Ananda, où un mendiant demeure ainsi présent d’esprit et qu’il examine, analyse et investigue minutieusement cet état avec discernement,"
+  "sn54.13:11.2": "Au moment, Ananda, où un mendiant demeure ainsi présent d’esprit et qu’il examine, analyse et investigue minutieusement cet état avec discernement,",
+  "sn54.13:11.3": "à ce moment-là le facteur d’éveil d’investigation des phénomènes est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’investigation des phénomènes, à ce moment-là le facteur d’éveil d’investigation des phénomènes va à la complétude de son développement chez ce mendiant."
 }
