Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -54,5 +54,6 @@
   "sn54.13:12.1": "En examinant, analysant et investiguant minutieusement cet état avec discernement, une énergie sans relâchement est activée en lui.",
   "sn54.13:12.2": "Au moment, Ananda, où examinant, analysant et investiguant minutieusement cet état avec discernement, une énergie sans relâchement est activée chez un mendiant,",
   "sn54.13:12.3": "à ce moment-là le facteur d’éveil d’énergie est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’énergie, à ce moment-là, le facteur d’éveil d’énergie va à la complétude de son développement chez ce mendiant.",
-  "sn54.13:13.1": "Chez celui qui a son énergie activée, une exaltation détachée de la chair apparaît."
+  "sn54.13:13.1": "Chez celui qui a son énergie activée, une exaltation détachée de la chair apparaît.",
+  "sn54.13:13.2": "Au moment, Ananda, où une exaltation détachée de la chair apparaît chez un mendiant qui a son énergie activée,"
 }
