Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -68,5 +68,6 @@
   "sn54.13:16.3": "à ce moment-là le facteur d’éveil d’équanimité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’équanimité, à ce moment-là, le facteur d’éveil d’équanimité va à la complétude de son développement chez ce mendiant.",
   "sn54.13:17.1": "Au moment, Ananda, où un mendiant reste à observer les ressentis dans les ressentis (…)",
   "sn54.13:17.2": "l’esprit dans l’esprit (…)",
-  "sn54.13:17.3": "le Dhamma dans les phénomènes,"
+  "sn54.13:17.3": "le Dhamma dans les phénomènes,",
+  "sn54.13:17.4": "à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction."
 }
