Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -69,5 +69,6 @@
   "sn54.13:17.1": "Au moment, Ananda, où un mendiant reste à observer les ressentis dans les ressentis (…)",
   "sn54.13:17.2": "l’esprit dans l’esprit (…)",
   "sn54.13:17.3": "le Dhamma dans les phénomènes,",
-  "sn54.13:17.4": "à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction."
+  "sn54.13:17.4": "à ce moment-là la présence d’esprit de ce mendiant est mise en place, sans distraction.",
+  "sn54.13:17.5": "Au moment, Ananda, où la présence d’esprit d’un mendiant est mise en place, sans distraction,"
 }
