Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -74,5 +74,6 @@
   "sn54.13:17.6": "à ce moment-là le facteur d’éveil de présence d’esprit est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil de présence d’esprit, à ce moment-là le facteur d’éveil de présence d’esprit va à la complétude de son développement chez ce mendiant.",
   "sn54.13:17.7": "(le reste doit être développé comme dans le cas de l’observation du corps)",
   "sn54.13:18.1": "Il observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré.",
-  "sn54.13:18.2": "Au moment, Ananda, où un mendiant observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré,"
+  "sn54.13:18.2": "Au moment, Ananda, où un mendiant observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré,",
+  "sn54.13:18.3": "à ce moment-là, le facteur d’éveil d’équanimité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’équanimité, à ce moment-là, le facteur d’éveil d’équanimité va à la complétude de son développement chez ce mendiant."
 }
