Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.13_translation-fr-sekha.json
@@ -76,5 +76,6 @@
   "sn54.13:18.1": "Il observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré.",
   "sn54.13:18.2": "Au moment, Ananda, où un mendiant observe minutieusement avec équanimité l’esprit qui est ainsi devenu concentré,",
   "sn54.13:18.3": "à ce moment-là, le facteur d’éveil d’équanimité est activé par ce mendiant, à ce moment-là ce mendiant développe le facteur d’éveil d’équanimité, à ce moment-là, le facteur d’éveil d’équanimité va à la complétude de son développement chez ce mendiant.",
-  "sn54.13:18.4": "Voici, Ananda, comment les quatre mises en place de la présence d’esprit sont développées et cultivées abondamment de manière à porter les sept facteurs d’éveil à leur complétude."
+  "sn54.13:18.4": "Voici, Ananda, comment les quatre mises en place de la présence d’esprit sont développées et cultivées abondamment de manière à porter les sept facteurs d’éveil à leur complétude.",
+  "sn54.13:19.1": "Comment, Ananda, les sept facteurs d’éveil sont-ils développés et cultivés abondamment de manière à porter la véritable connaissance & libération à leur complétude ?"
 }
