Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.20_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.20_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.20_translation-fr-sekha.json
@@ -11,5 +11,6 @@
   "sn54.20:1.7": "il s’entraîne : «je vais inspirer en contemplant la renonciation» ; il s’entraîne : «je vais expirer en contemplant la renonciation».",
   "sn54.20:1.8": "Voici, mendiants, comment la concentration au moyen de la présence de l’esprit sur la respiration est développée et cultivée abondamment de manière à mener à l’abandon des entraves spirituelles (…)",
   "sn54.20:1.9": "au déracinement des penchants latents (…)",
-  "sn54.20:1.10": "à la compréhension complète du parcours (…)"
+  "sn54.20:1.10": "à la compréhension complète du parcours (…)",
+  "sn54.20:1.11": "à la destruction des impuretés mentales."
 }
