Translations by BhikkhuSekha to translation/fr/sekha/sutta/sn/sn54/sn54.15_translation-fr-sekha.json

--- a/translation/fr/sekha/sutta/sn/sn54/sn54.15_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn54/sn54.15_translation-fr-sekha.json
@@ -3,5 +3,6 @@
   "sn54.15:0.2": "2. Deuxième chapitre",
   "sn54.15:0.3": "Des mendiants (1)",
   "sn54.15:1.1": "En ce jour-là, un certain nombre de mendiants vinrent voir le Fortuné, lui rendirent hommage, s’assirent d’un côté et lui dirent :",
-  "sn54.15:1.2": "«Y a-t-il, Bhanté un état qui, lorsqu’il est développé et cultivé abondamment, porte quatre états à leur complétude ? Y a-t-il quatre états qui, lorsqu’ils sont développés et cultivés abondamment, portent sept états à leur complétude ? Et y a-t-il sept états qui, lorsqu’ils sont développés et cultivés abondamment, portent deux états à leur complétude ?"
+  "sn54.15:1.2": "«Y a-t-il, Bhanté un état qui, lorsqu’il est développé et cultivé abondamment, porte quatre états à leur complétude ? Y a-t-il quatre états qui, lorsqu’ils sont développés et cultivés abondamment, portent sept états à leur complétude ? Et y a-t-il sept états qui, lorsqu’ils sont développés et cultivés abondamment, portent deux états à leur complétude ?",
+  "sn54.15:1.3": "— Il y a, mendiants, un état qui, lorsqu’il est développé et cultivé abondamment, porte quatre états à leur complétude. Il y a quatre états qui, lorsqu’ils sont développés et cultivés abondamment, portent sept états à leur complétude. Et il y a sept états qui, lorsqu’ils sont développés et cultivés abondamment, portent deux états à leur complétude."
 }
